added .env support and error handling